added image init

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="images/ba3c40adc6258ae61a62ec455cf6dbd4.jpg"
     <nav id="nav">
         <div class="navigation">Home</div>
         <div class="navigation">Diet</div>
